# RideGrid

./: .env.example  .gitignore  COMPLETE_RUN_INSTRUCTIONS.md  DEPLOYMENT_OPTIONS.md  GETTING_STARTED.md  INSTALL_DOCKER.md  Makefile  PROJECT_SUMMARY.md  QUICK_START.md  README.md  START_HERE.md  STATUS.md  ULTRA_CREATIVE_UI_GUIDE.md  WHAT_TO_DO_NOW.md
.github/workflows/: ci.yml
backend/: requirements.txt
dashboards/: ridegrid-overview.json
deploy/docker-compose/: README.md  alerts.yml  docker-compose.yml  otel-collector-config.yml  prometheus.yml  redis.conf
docs/: architecture.md
helm/ridegrid/: Chart.yaml  values.yaml
libs/ridegrid-common/: README.md  pyproject.toml
libs/ridegrid-common/src/ridegrid_common/: __init__.py  config.py  database.py  errors.py  kafka.py  logging.py  metrics.py  middleware.py  redis.py
libs/ridegrid-proto/ridegrid_proto/: __init__.py  ridegrid_pb2.py  ridegrid_pb2.pyi  ridegrid_pb2_grpc.py
load/k6/: load-test.js
proto/: buf.yaml
scripts/: demo-mode.sh  setup.sh  start-all.sh  stop-all.sh
services/assignment-orchestrator/: Dockerfile  main.py  requirements.txt
services/gateway/: Dockerfile  main.py  requirements.txt
services/matching-engine/: Dockerfile  main.py  requirements.txt
services/state-query/: Dockerfile  main.py  requirements.txt
services/telemetry-ingest/: Dockerfile  main.py  requirements.txt
tests/: test_gateway.py
